css/style.css
/* ... */
/* Mobile Nav Styling */
#mobile-nav {
  position: fixed;
  top: 0;
  padding-top: 18px;
  bottom: 0;
  z-index: 998;
  background: rgba(52, 59, 64, 0.9);
  left: -260px;
  width: 260px;
  overflow-y: auto;
  transition: 0.4s;
}

#mobile-nav ul {
  padding: 0;
  margin: 0;
  list-style: none;
}

#mobile-nav ul li {
  position: relative;
}

#mobile-nav ul li a {
  color: #fff;
  font-size: 16px;
  overflow: hidden;
  padding: 10px 22px 10px 15px;
  position: relative;
  text-decoration: none;
  width: 100%;
  display: block;
  outline: none;
}

#mobile-nav ul li a:hover {
  color: #fff;
}

#mobile-nav ul li li {
  padding-left: 30px;
}

#mobile-nav ul .menu-has-children i {
  position: absolute;
  right: 0;
  z-index: 99;
  padding: 15px;
  cursor: pointer;
  color: #fff;
}

#mobile-nav ul .menu-has-children i.fa-chevron-up {
  color: #1dc8cd;
}

#mobile-nav ul .menu-item-active {
  color: #1dc8cd;
}

#mobile-body-overly {
  width: 100%;
  height: 100%;
  z-index: 997;
  top: 0;
  left: 0;
  position: fixed;
  background: rgba(52, 59, 64, 0.9);
  display: none;
}

/* Mobile Nav body classes */
body.mobile-nav-active {
  overflow: hidden;
}

body.mobile-nav-active #mobile-nav {
  left: 0;
}

body.mobile-nav-active #mobile-nav-toggle {
  color: #fff;
}

/*--------------------------------------------------------------
# Sections
--------------------------------------------------------------*/
/* Sections Header
--------------------------------*/
.section-header .section-title {
  font-size: 32px;
  text-align: center;
  font-weight: 400;
}

.section-header .section-description {
  text-align: center;
  padding-bottom: 40px;
}

.section-header .section-divider {
  display: block;
  width: 60px;
  height: 3px;
  /* background: #1dc8cd;
  background: linear-gradient(0deg, #1dc8cd 0%, #55fabe 100%); */
  margin: 0 auto;
  margin-bottom: 20px;
}

/* About Us Section
--------------------------------*/
#about {
  padding: 40px 0 0 0;
  overflow: hidden;
  background-color: #f7ce5b;
}

#about .about-img {
  /* height: 510px; */
  overflow: hidden;
}

#about .about-img img {
  margin-left: -15px;
  max-width: 100%;
}

@media (max-width: 768px) {
  #about .about-img {
    height: auto;
  }
  #about .about-img img {
    margin-left: 0;
    padding-bottom: 30px;
  }
}

#about .content .h2 {
  color: #333;
  font-weight: 300;
  font-size: 24px;
}

#about .content h3 {
  color: #777;
  font-weight: 300;
  font-size: 18px;
  line-height: 26px;
  font-style: italic;
}

#about .content p {
  line-height: 26px;
}

#about .content p:last-child {
  margin-bottom: 0;
}

#about .content i {
  font-size: 20px;
  padding-right: 4px;
  color: #1dc8cd;
}

#about .content ul {
  list-style: none;
  padding: 0;
}

#about .content ul li {
  padding-bottom: 10px;
}

#long-history {
  background-color: #003b5d;
  color: white;
  padding: 40px;
}

#curriculum {
  background-color: white;
  color: #003b5d;
  padding: 60px;
}

#curriculum .steam-letter {
  padding-top: 20px;
  font-weight: 700;
  font-size: 60px;
}

#curriculum .fixed-height {
  min-height: 70px;
  padding: 10px;
}

/* Initiatives Section
--------------------------------*/
#initiatives {
  padding: 60px 0 60px 0;
  overflow: hidden;
  background-color: #003b5d;
  color: white;
}

#initiatives .box {
  /* padding: 40px; */
  margin-bottom: 30px;
  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.5);
  background: #778998;
  text-align: center;
}

#initiatives .box h4 {
  padding: 20px 0 0px 0;
  color: white;
  font-size: 24px;
  font-weight: 500;
}

#initiatives .box p {
  padding: 20px 10px 20px 10px;
}

#initiatives h3 {
  font-weight: 400;
  margin-bottom: 15px;
  font-size: 28px;
}

#initiatives h4 {
  font-size: 46px;
  color: #1dc8cd;
  font-weight: 300;
}

#initiatives h4 sup {
  font-size: 20px;
  top: -20px;
}

#initiatives h4 span {
  color: #bababa;
  font-size: 20px;
}

#initiatives ul {
  padding: 0;
  list-style: none;
  color: #999;
  text-align: left;
  line-height: 20px;
}

#initiatives ul li {
  padding-bottom: 12px;
}

#initiatives ul i {
  color: #1dc8cd;
  font-size: 18px;
  padding-right: 4px;
}

#initiatives .get-started-btn {
  background: #515e61;
  display: inline-block;
  padding: 6px 30px;
  border-radius: 20px;
  color: #fff;
  transition: none;
  font-size: 14px;
  font-weight: 400;
  font-family: "Montserrat", sans-serif;
}

#initiatives .featured {
  border: 2px solid #1dc8cd;
}

#initiatives .featured .get-started-btn {
  background: linear-gradient(45deg, #1de099, #1dc8cd);
}

#initiatives .initiatives-btn {
  background: #f7ce5b;
  display: inline-block;
  padding: 6px 30px;
  margin-top: 18px;
  border-radius: 20px;
  color: #003b5d;
  transition: none;
  font-size: 14px;
  font-weight: 400;
  font-family: "Montserrat", sans-serif;
}

/* Vision Section
--------------------------------*/
#vision {
  background: #f7ce5b;
  color: #003b5d;
  padding: 40px;
  overflow: hidden;
}

#vision .features-img {
  text-align: center;
  padding-top: 20px;
}

@media (min-width: 769px) {
  #vision .features-img {
    padding-top: 120px;
    margin-top: -200px;
  }
}

#vision .features-img img {
  max-width: 100%;
}

#vision .box {
  margin-bottom: 15px;
  text-align: center;
}

#vision .icon {
  margin-bottom: 10px;
}

#vision .icon i {
  font-size: 40px;
  transition: 0.5s;
}

#vision .icon i:before {
  background: #003b5d;
  background-clip: border-box;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

#vision .title {
  font-weight: 300;
  margin-bottom: 15px;
  font-size: 22px;
}

#vision .title a {
  color: #111;
}

#vision .description {
  font-size: 14px;
  line-height: 24px;
  margin-bottom: 10px;
}

#vision .section-description {
  padding-bottom: 10px;
}

/* Call To Action Section
--------------------------------*/
#call-to-action {
  overflow: hidden;
  background: #f7ce5b;
  color: #003b5d;
  background-size: cover;
  padding: 40px 0;
}

#call-to-action .cta-title {
  font-size: 28px;
  font-weight: 700;
}
/* ... */

